// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Kambi service fails to fetch event proper getting title from event third path 1`] = `
Object {
  "betOffers": Array [],
  "statistics": Array [
    Object {
      "goalsAgainst": 200,
      "goalsDifference": -100,
      "goalsFor": 100,
      "outcomes": Array [],
    },
  ],
  "title": "path3",
}
`;

exports[`Kambi service handles Kambi API returning empty events set 1`] = `[TypeError: Cannot read property 'leagueTableRows' of undefined]`;

exports[`Kambi service handles Kambi API returning empty response for getEvent request 1`] = `[TypeError: Cannot read property 'leagueTableRows' of undefined]`;

exports[`Kambi service returns correct data when criterionId is given 1`] = `
Object {
  "betOffers": Array [
    Object {
      "criterion": Object {
        "id": 123,
      },
      "outcomes": Array [
        Object {
          "participantId": 1000,
        },
      ],
    },
  ],
  "statistics": Array [
    Object {
      "goalsAgainst": 200,
      "goalsDifference": -100,
      "goalsFor": 100,
      "outcomes": Array [
        Object {
          "participantId": 1000,
        },
      ],
      "participantId": 1000,
    },
  ],
  "title": "",
}
`;

exports[`Kambi service returns correct data when criterionId is not given 1`] = `
Object {
  "betOffers": Array [],
  "statistics": Array [
    Object {
      "goalsAgainst": 200,
      "goalsDifference": -100,
      "goalsFor": 100,
      "outcomes": Array [],
    },
  ],
  "title": "",
}
`;
